<resources>
	<string name="app_name">Popular Movies</string>
	<string name="movie_details_title">Movie Details</string>
	
	<string name="error_message">
        An error has occurred. Please try again by clicking REFRESH.
    </string>
	
	<string name="no_internet_connection">Network not found. Please connect your device to internet!</string>
	
	<!-- Mock data to display in layout preview -->
	<string name="mock_movie_thumbnail">Movie Thumbnail</string>
	<string name="mock_movie_title">Movie Title</string>
	<string name="mock_movie_release_date">2017</string>
	<string name="mock_movie_duration">120mins</string>
	<string name="mock_movie_user_rating">8.1/10</string>
	<string name="mock_movie_overview">This is a long text that contains movie synopsis
		to convey the narrative arc, an explanation of the plot, the characters, and how the movie ends. </string>
	
	<string name="action_refresh">Refresh</string>
	<string name="action_sort">Sort by</string>
	<string name="sort_by_popularity">Most popular</string>
	<string name="sort_by_rating">Top rated</string>
	
	<string name="duration_text">%1$dmins</string>
	<string name="user_ratings_text">%1$.1f/10</string>
	
</resources>