<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.example.android.popularmovies.MovieDetailsActivity">
	
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<RelativeLayout
			android:id="@+id/details_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:id="@+id/tv_details_movie_title"
				style="@style/titleTextStyle"
				tools:text="@string/mock_movie_title"/>
			
			<ImageView
				android:id="@+id/iv_details_movie_thumbnail"
				style="@style/thumbnailStyle"
				android:layout_below="@id/tv_details_movie_title"
				android:contentDescription="@string/mock_movie_thumbnail"
				tools:src="@drawable/sample"/>
			
			<TextView
				android:id="@+id/tv_details_movie_release_date"
				style="@style/dateTextStyle"
				android:layout_below="@id/tv_details_movie_title"
				android:layout_toEndOf="@id/iv_details_movie_thumbnail"
				android:layout_toRightOf="@id/iv_details_movie_thumbnail"
				tools:text="@string/mock_movie_release_date"/>
			
			<TextView
				android:id="@+id/tv_details_movie_duration"
				style="@style/dateTextStyle"
				android:layout_below="@id/tv_details_movie_release_date"
				android:layout_toEndOf="@id/iv_details_movie_thumbnail"
				android:layout_toRightOf="@id/iv_details_movie_thumbnail"
				android:textStyle="italic"
				tools:text="@string/mock_movie_duration"/>
			
			<TextView
				android:id="@+id/tv_details_movie_rating"
				style="@style/ratingsTextStyle"
				android:layout_below="@id/tv_details_movie_duration"
				android:layout_toEndOf="@id/iv_details_movie_thumbnail"
				android:layout_toRightOf="@id/iv_details_movie_thumbnail"
				tools:text="@string/mock_movie_user_rating"/>
			
			<TextView
				android:id="@+id/tv_details_movie_overview"
				style="@style/overviewTextStyle"
				android:layout_below="@id/iv_details_movie_thumbnail"
				tools:text="@string/mock_movie_overview"/>
		
		</RelativeLayout>
	</ScrollView>
	
	<TextView
		android:id="@+id/tv_error_message_display"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:padding="@dimen/padding_16"
		android:text="@string/error_message"
		android:textAppearance="@android:style/TextAppearance.Medium"
		android:textColor="@color/colorDarkGrey"
		android:visibility="invisible"/>
	
	<ProgressBar
		android:id="@+id/pb_loading_indicator"
		style="@style/Widget.AppCompat.ProgressBar"
		android:layout_width="@dimen/progress_bar_width"
		android:layout_height="@dimen/progress_bar_height"
		android:layout_centerInParent="true"
		android:visibility="invisible"/>

</RelativeLayout>